# tslib

./: .cvsignore  .gitignore  .mailmap  AUTHORS  Android.mk  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.markdown  README.md  THANKS  TODO  acinclude.m4  aclocal.m4  autogen-clean.sh  autogen.sh  config.h.in  configure  configure.ac  configure.in  input-raw.c  mkinstalldirs  release  release.sh  testfile  tslib.pc.in
.github/workflows/: codeql-buildscript.sh
cmake/: config.h.in  tslibConfig.cmake.in
doc/: CMakeLists.txt  ChangeLog.old  Makefile.am  Makefile.in  ts.conf.5  ts_calibrate.1  ts_close.3  ts_close_restricted.3  ts_conf.1  ts_conf_get.3  ts_conf_set.3  ts_config.3  ts_error_fn.3  ts_fd.3  ts_find.3  ts_finddev.1  ts_get_eventpath.3  ts_harvest.1  ts_libversion.3  ts_open.3  ts_open_restricted.3  ts_print.1  ts_print_ascii_logo.3  ts_print_mt.1  ts_print_raw.1  ts_print_raw_mt.1  ts_read.3  ts_read_raw_mt.3  ts_setup.3  ts_test.1  ts_test_mt.1  ts_uinput.1  ts_verify.1  tsconf.5  tslib_version.3
etc/: CMakeLists.txt  Makefile.am  Makefile.in  ts.conf
kodi-addon/plugin.program.ts_calibrate/: addon.py  addon.xml  changelog.txt
kodi-addon/plugin.program.ts_calibrate/resources/: settings.xml
kodi-addon/plugin.program.ts_calibrate/resources/language/English/: strings.xml
m4/internal/: tslib_modules.m4  visibility.m4
plugins/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  arctic2-raw.c  collie-raw.c  corgi-raw.c  crop.c  cy8mrln-palmpre.c  cy8mrln.h  debounce.c  dejitter.c  dmc-raw.c  dmc_dus3000-raw.c  evthres.c  galax-raw.c  h3600-raw.c  iir.c  input-evdev-raw.c  input-raw.c  invert.c  linear-h2200.c  linear.c  lowpass.c  median.c  mk712-raw.c  one-wire-ts-input-raw.c  plugins.h  pthres.c  skip.c  st1232-raw.c  tatung-raw.c  touchkit-raw.c  ucb1x00-raw.c  variance.c  waveshare-raw.c
src/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  ts_attach.c  ts_close.c  ts_config.c  ts_config_filter.c  ts_error.c  ts_fd.c  ts_find.c  ts_get_eventpath.c  ts_load_module.c  ts_open.c  ts_option.c  ts_parse_vars.c  ts_read.c  ts_read_raw.c  ts_read_raw_ipaq.c  ts_read_raw_module.c  ts_reconfig.c  ts_setup.c  ts_strsep.c  ts_strsep.h  ts_version.c  tslib-filter.h  tslib-private.h  tslib.h
tests/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  fbutils-bsd.c  fbutils-linux.c  fbutils.c  fbutils.h  font.h  font_8x16.c  font_8x8.c  sdlutils.c  sdlutils.h  testutils.c  testutils.h  ts_calibrate.c  ts_calibrate.h  ts_calibrate_common.c  ts_calibrate_sdl.c  ts_conf.c  ts_finddev.c  ts_harvest.c  ts_print.c  ts_print_mt.c  ts_print_raw.c  ts_print_raw_mt.c  ts_test.c  ts_test_mt.c  ts_test_mt_sdl.c  ts_uinput_touch.c  ts_verify.c
tests/filters/: .gitignore  Atmel maXTouch Touchscreen.1-finger-drag-up-down.events.skip.expected  README.md  debounce.conf  evemu_debounce_test.sh  evemu_debounce_tsconf  evemu_maxtouch_desc  evemu_maxtouch_rec_debounce  evemu_maxtouch_rec_skip  evemu_skip_tsconf  evemu_test.sh
tests/scripts/: Atmel maXTouch Touchscreen.1-finger-drag-up-down.events.debounce.expected  Atmel maXTouch Touchscreen.1-finger-drag-up-down.events.iir.expected  Atmel maXTouch Touchscreen.1-finger-drag-up-down.events.median.expected  Atmel maXTouch Touchscreen.1-finger-fast-taps.events.debounce.expected  Atmel maXTouch Touchscreen.4-finger-drag-down.events.iir.expected  Atmel maXTouch Touchscreen.ts-verify-1.events  iir.conf  median.conf  skip.conf  test.sh  ts_verify_evemu.sh
tools/: CMakeLists.txt  Makefile.am  Makefile.in  ts_uinput.c  ts_uinput_start.sh
website/: index.html  tslib.css
